methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:10: error: ':' expected but '.' found.
def sousMarque(a.Color,b.Color) {
                ^PatternPicture:33: error: identifier expected but '}' found.
}
^